/**
 * Snapshot tests for service record generation
 * Captures the DNS records generated by service categories for regression testing
 */

import { describe, it, expect, beforeEach, afterEach, vi } from "vitest";
import {
  serviceToRecords,
  categoryToRecords,
  categoriesToRecords,
} from "../../src/services/core.js";
import {
  infrastructureServices,
  productivityServices,
  mediaServices,
  gamingServices,
  homelabServices,
  internalServices,
  polarisVideoServices,
  allServices,
} from "../../src/services/index.js";

// Store original globalThis values
const originalA = (globalThis as Record<string, unknown>).A;
const originalCNAME = (globalThis as Record<string, unknown>).CNAME;

describe("Service Record Snapshot Tests", () => {
  beforeEach(() => {
    // Mock A() to return structured data
    (globalThis as Record<string, unknown>).A = vi.fn((name: string, ip: string, ...modifiers: unknown[]) => ({
      type: "A",
      name,
      ip,
      modifiers,
    }));

    // Mock CNAME() to return structured data
    (globalThis as Record<string, unknown>).CNAME = vi.fn((name: string, target: string, ...modifiers: unknown[]) => ({
      type: "CNAME",
      name,
      target,
      modifiers,
    }));
  });

  afterEach(() => {
    (globalThis as Record<string, unknown>).A = originalA;
    (globalThis as Record<string, unknown>).CNAME = originalCNAME;
  });

  describe("Individual Service Records", () => {
    it("direct routing service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-direct",
        description: "Test direct service",
        routing: "direct",
        server: "greenwood",
      });
      expect(records).toMatchSnapshot();
    });

    it("tunnel routing service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-tunnel",
        description: "Test tunnel service",
        routing: "tunnel",
      });
      expect(records).toMatchSnapshot();
    });

    it("proxied routing service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-proxied",
        description: "Test proxied service",
        routing: "proxied",
        server: "greenwood",
      });
      expect(records).toMatchSnapshot();
    });

    it("internal routing service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-internal",
        description: "Test internal service",
        routing: "internal",
        server: "local-traefik",
      });
      expect(records).toMatchSnapshot();
    });

    it("custom IP service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-ip",
        description: "Test custom IP service",
        ip: "10.0.0.100",
      });
      expect(records).toMatchSnapshot();
    });

    it("custom CNAME service should match snapshot", () => {
      const records = serviceToRecords({
        subdomain: "test-cname",
        description: "Test custom CNAME service",
        cname: "external.example.com.",
      });
      expect(records).toMatchSnapshot();
    });
  });

  describe("Service Category Records", () => {
    it("infrastructure services should match snapshot", () => {
      const records = categoryToRecords(infrastructureServices);
      expect(records).toMatchSnapshot();
    });

    it("productivity services should match snapshot", () => {
      const records = categoryToRecords(productivityServices);
      expect(records).toMatchSnapshot();
    });

    it("media services should match snapshot", () => {
      const records = categoryToRecords(mediaServices);
      expect(records).toMatchSnapshot();
    });

    it("gaming services should match snapshot", () => {
      const records = categoryToRecords(gamingServices);
      expect(records).toMatchSnapshot();
    });

    it("homelab services should match snapshot", () => {
      const records = categoryToRecords(homelabServices);
      expect(records).toMatchSnapshot();
    });

    it("internal services should match snapshot", () => {
      const records = categoryToRecords(internalServices);
      expect(records).toMatchSnapshot();
    });

    it("polaris video services should match snapshot", () => {
      const records = categoryToRecords(polarisVideoServices);
      expect(records).toMatchSnapshot();
    });
  });

  describe("All Services Combined", () => {
    it("all services combined should match snapshot", () => {
      const records = categoriesToRecords(allServices);
      expect(records).toMatchSnapshot();
    });

    it("all services count should be consistent", () => {
      const records = categoriesToRecords(allServices);
      expect(records.length).toMatchSnapshot();
    });
  });
});

