// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Service Record Snapshot Tests > All Services Combined > all services combined should match snapshot 1`] = `
[
  {
    "ip": "10.10.0.1",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "router",
    "type": "A",
  },
  {
    "ip": "10.10.0.10",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "truenas",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "auth",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "vault",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "docker",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "20.64.176.83",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "up",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "net",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "atuin",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "cloud",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "docs",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "mqtt",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "chat",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.11.2.123",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "kiwix",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "books",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "calibre",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "manga",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "stash",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "games",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "retro",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "garage",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "k2v",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "d",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "ingest.log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "registry.kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "registry",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "ai",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "traefik",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "netbootxyz",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "portainer",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "pgadmin",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "media",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "request",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "invite",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "xteve",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "threadfin",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "tunarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "logos",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "guide",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "mirror",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "flows",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "metube",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "maintain",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "rec",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "sonarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "radarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "lidarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "readarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "prowlarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "sabnzbd",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "decryptarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "tautulli",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > All Services Combined > all services count should be consistent 1`] = `61`;

exports[`Service Record Snapshot Tests > Individual Service Records > custom CNAME service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-cname",
    "target": "external.example.com.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > custom IP service should match snapshot 1`] = `
[
  {
    "ip": "10.0.0.100",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-ip",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > direct routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-direct",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > internal routing service should match snapshot 1`] = `
[
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-internal",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > proxied routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-proxied",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > tunnel routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "test-tunnel",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > gaming services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "games",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "retro",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > homelab services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "garage",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "k2v",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "d",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "ingest.log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "registry.kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "registry",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "ai",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > infrastructure services should match snapshot 1`] = `
[
  {
    "ip": "10.10.0.1",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "router",
    "type": "A",
  },
  {
    "ip": "10.10.0.10",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "truenas",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "auth",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "vault",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "docker",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "20.64.176.83",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "up",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "net",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > internal services should match snapshot 1`] = `
[
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "traefik",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "netbootxyz",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "portainer",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "pgadmin",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > media services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "books",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "calibre",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "manga",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "stash",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > polaris video services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "media",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "request",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "invite",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "xteve",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "threadfin",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "tunarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "logos",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "guide",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "mirror",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "flows",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "metube",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "maintain",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "rec",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "sonarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "radarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "lidarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "readarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "prowlarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "sabnzbd",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "decryptarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "tautulli",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > productivity services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "atuin",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "cloud",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "docs",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "mqtt",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "chat",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.11.2.123",
    "modifiers": [
      {
        "cloudflare_proxy": "off",
      },
    ],
    "name": "kiwix",
    "type": "A",
  },
]
`;
